Bug 1764589 - Remove vertex_array_object extension requirement for WebGL. r=gfx-reviewers,jgilbert

There are some Android devices which support GLES 2 but do not support
the vertex_array_object extension, and we therefore do not give them
WebGL 1.

This requirement was added in bug 1322746. as part of some changes to
GLBlitHelper which required VAOs. However, in bug 1396704 a fallback
path was added to GLBlitHelper which does not require VAOs. The WebGL
implementation can make use of the WebGLVertexArrayFake fallback path
on devices without VAO support, meaning this requirement can be
dropped.

Differential Revision: https://phabricator.services.mozilla.com/D145422